--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -9,7 +9,7 @@ The [World Cube Association]({WCA_URL}) has recognised Speedcubing Ireland as a 
 
 Speedcubing Ireland runs competitions all over Ireland but we need local organisers to help us out.  If you are interested in having a competition in your local area, [contact us](/contact) for further information.  Competitions are open to anyone who can solve a cube, they are supportive and welcoming environments and are a great experience regardless of your age or ability.
 
-![](/images/croud.webp)
+![](/images/crowd.webp)
 
 export default ({ children }) => (
   <Layout>
