--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -27,4 +27,4 @@ If you would like to get in touch with us, you can contact our email address <sp
 
 ![](/images/crowd.webp)
 
-export default ({ children }) => <Post>{children}</Post>
+export default ({ children }) => <Post title="About">{children}</Post>
