--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -4,16 +4,16 @@ import Link from 'next/link';
 import Post from '../../components/posts/Post';
 import Obfuscate from 'react-obfuscate';
 
-# About Us
+# Sobre nosaltres
+L'Associació Catalana de Speedcubing és una associació sense ànim de lucre, autogestionada gràcies a diversos voluntaris que es dediquen a donar suport a la comunitat de speedcubing de Catalunya. L'speedcubing és l'esport dedicat a resoldre trencaclosques seqüencials (estil rubik), de la manera més ràpida i eficient possible.
 
-Speedcubing Ireland is a not-for-profit, wholly volunteer-run organisation dedicated to supporting the speedcubing community in Ireland. Speedcubing is the act of solving twisty puzzles, such as the Rubik&apos;s Cube®, as quickly as possible. 
 
-The [World Cube Association](https://www.worldcubeassociation.org) has recognised Speedcubing Ireland as a regional organisation since 2019. The WCA governs competitions for twisty puzzles, of which the most well known is the Rubik&apos;s Cube® or the 3x3x3 Cube as it is officially called. There are currently 17 official WCA events, including big cubes up to 7x7x7, Blindfolded events and some events that are not even cubes such as the Pyraminx and Clock.
+La [World Cube Association](https://www.worldcubeassociation.org) ha reconegut speedcubing.cat (Associació Catalana de speedcubing) com a organització regional des de 2023. La WCA regula i recull les competicions de speedcubing de manera internacional. Actualment hi han 17 modalitats de competició, incloent cubs de rubik des del 2x2x2 fins al 7x7x7, a cegues, entre d'altres...
 
-Speedcubing Ireland runs competitions all over Ireland but we need local organisers to help us out.  If you are interested in having a competition in your local area, contact us for further information.  Competitions are open to anyone who can solve a cube, they are supportive and welcoming environments and are a great experience regardless of your age or ability.
+L'ACSC organitza i dóna suport a competicions de speedcubing per tot Catalunya. Si estàs interessat en organitzar una competició, possa't en contacte amb nosaltres per obtenir més informació. Les competicions són obertes a tothom que sàpiga resoldre el cub de rubik en qualssevol de les seves modalitats, som una comunitat amistosa i oberta sense discriminar per edat o habilitat.
 
-## Contact Us
-If you would like to get in touch with us, you can contact our email address <span><Obfuscate email="speedcubingireland@gmail.com" /></span> or at any of our social media accounts below.
+## Contacta'ns
+Si vols possar-te en contacte amb nosaltres, ens pots contactar per e-mail a <span><Obfuscate email="associacio@speedcubing.cat" /></span> o a qualssevol dels nostres comptes en xarxes socials.
 
 <div>
   <Link href="https://www.facebook.com/SpeedcubingIreland">
