--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -23,7 +23,7 @@ This full zip jacket is produced by O'Neills and is made from a snug fitting bre
 This Polo Shirt is an easy-to-wear classic produced by O'Neills. Made from a lightweight and quick-drying fabric, this polo features sweat-wicking technology to keep you dry and comfortable.
 
 ### Design
-Both items feature the Speedcubing Ireland logo along with the Euros 2024 competition logo on the front.
+Both items feature the Speedcubing Ireland logo along with the Euros 2024 competition logo embroidered on the front.
 The jacket has the Irish flag on the sleeve.
 
 The back of both items has your surname printed on it. Please ensure this is spelled correctly when ordering.
@@ -39,15 +39,48 @@ Items are availible in:
   - Youths (13)
   - Adults (S - 2XL)
 
-### Ordering
+## Ordering
 
 The deadline for ordering is the **4th of April**. No order modifications or refunds will be possible after this date.
 You will be able to collect your order at competitions about 6 weeks after this, and we will send out an email letting you know when they are available for collection.
 
+### Links
+
 Please use the link relevent to the sizes you would like. If you want different sizes for each item, please make two seperate orders.
-  - [Kids](link/kids)
-  - [Youths](link/youths)
-  - [Adults](link/adults)
+  - [Order Kids Sizes](link/kids)
+  - [Order Youths Sizes](link/youths)
+  - [Order Adults Sizes](link/adults)
+
+The selected items may be hard to adjust on mobile. We recommend using a desktop if you have any issues.
+
+### Prices
+
+<table>
+  <thead>
+    <tr>
+        <td>**Size**</td>
+        <td>**Polo**</td>
+        <td>**Jacket**</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+        <td>Kids</td>
+        <td>€36.50</td>
+        <td>€49.00</td>
+    </tr>
+    <tr>
+        <td>Youths</td>
+        <td>€42.00</td>
+        <td>€57.00</td>
+    </tr>
+    <tr>
+        <td>Adults</td>
+        <td>€44.50</td>
+        <td>€60.00</td>
+    </tr>
+  </tbody>
+</table>
 
 ## Discount
 <div className="alert alert-info shadow-lg">
