clarify wca-id situaton

--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -93,7 +93,7 @@ The selected items may be hard to adjust on mobile. We recommend using a desktop
 In order to help as many people as possible be able to get the merch, all items are sold at cost price.
 Speedcubing Ireland will be subsidising a €15 discount for each competitor who has registered for Euros.
 
-To claim this discount, enter your WCA ID when ordering and the discount should be applied.
+To claim this discount, enter your WCA ID as a coupon code when ordering (not just the normal WCA ID field) and the discount should be applied.
 Each code can only be used once, and all orders are manually approved to ensure they are used correctly.
 
 **Please note, only orders made from those going to Euros and their families will be accepted**
