--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -23,8 +23,8 @@ This full zip jacket is produced by O'Neills and is made from a snug fitting bre
 This Polo Shirt is an easy-to-wear classic produced by O'Neills. Made from a lightweight and quick-drying fabric, this polo features sweat-wicking technology to keep you dry and comfortable.
 
 ### Design
-Both items feature the Speedcubing Ireland logo along with the Euros 2024 competition logo embroidered on the front.
-The jacket has the Irish flag on the sleeve.
+Both items feature the Speedcubing Ireland logo along with the Euros 2024 competition logo on the front.
+The jacket has the Irish flag on the sleeve along with the embroidered logos.
 
 The back of both items has your surname printed on it. Please ensure this is spelled correctly when ordering.
 Nicknames / Variations of this will be approved on a case by case basis.
