--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -34,7 +34,7 @@ Nicknames / Variations of this will be approved on a case by case basis.
 Please use the [O'Neills size guide](https://www.oneills.com/size-guides) when choosing the size of the items you are ordering. 
 You can find the sizes under the O'Neills Leisurewear section.
 
-Items are availible in: 
+Items are available in: 
   - Kids (5/6, 7/8, 9/10, 10/11)
   - Youths (13)
   - Adults (S - 2XL)
@@ -46,7 +46,7 @@ You will be able to collect your order at competitions about 6 weeks after this,
 
 ### Links
 
-Please use the link relevent to the sizes you would like. If you want different sizes for each item, please make two seperate orders.
+Please use the link relevant to the sizes you would like. If you want different sizes for each item, please make two separate orders.
   - [Order Kids Sizes](link/kids)
   - [Order Youths Sizes](link/youths)
   - [Order Adults Sizes](link/adults)
