--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -31,10 +31,10 @@ Nicknames / Variations of this will be approved on a case by case basis.
 
 ### Sizing
 
-Please use the [O'Neills size guide](https://www.oneills.com/size-guides) when choosing the size of the items you are ordering. 
+Please use the [O'Neills size guide](https://www.oneills.com/size-guides) when choosing the size of the items you are ordering.
 You can find the sizes under the O'Neills Leisurewear section.
 
-Items are available in: 
+Items are available in:
   - Kids (5/6, 7/8, 9/10, 10/11)
   - Youths (13)
   - Adults (S - 2XL)
@@ -86,7 +86,7 @@ The selected items may be hard to adjust on mobile. We recommend using a desktop
 <div className="alert alert-info shadow-lg">
   <div>
     <svg xmlns="http://www.w3.org/2000/svg" className="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-    <span>Use your WCA ID for €15 off your order</span>
+    <span>Use your WCA ID (as a coupon, not the WCA ID Field) for €15 off your order</span>
   </div>
 </div>
 
