--- a/pages/posts/[code]/merch.mdx
+++ b/pages/posts/[code]/merch.mdx
@@ -2,13 +2,13 @@ import Post from '../../../components/posts/Post';
 
 export const KIDS_LINK = process.env.EUROS_LINK_KIDS;
 
-# Ireland Euros Merch
+# Ireland Euros Merch (Orders Closed)
 Speedcubing Ireland will be offering merch specifically for competitors (and their families) who are attending the Rubik's WCA European Championship 2024 from Ireland.
 
 <div className="alert alert-error shadow-lg">
   <div>
     <svg xmlns="http://www.w3.org/2000/svg" className="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-    <span>The deadline for ordering is the **4th of April**</span>
+    <span>Orders have now closed</span>
   </div>
 </div>
 
