--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -13,7 +13,7 @@ Speedcubing Ireland is recognised by the [World Cube Association](https://www.wo
 Speedcubing Ireland runs competitions all over Ireland but we need local organisers to help us out.  If you are interested in having a competition in your local area, contact us for further information.  Competitions are open to anyone who can solve a cube, they are supportive and welcoming environments and are a great experience regardless of your age or ability.
 
 ## Policies
-Here are our public policies. There is also additional information about each competition on their relevent WCAA pages. If you have any queries about any of these please contact us via the information below.
+Here are our public policies. There is also additional information about each competition on their relevent WCA pages. If you have any queries about any of these please contact us via the information below.
 
 - [Lost and Found Policy](/policies/lost-and-found.pdf)
 - [Competition Sponsor Policy](/policies/comp-sponsor.pdf)
