Update contact address

--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -20,7 +20,7 @@ Here are our public policies. There is also additional information about each co
 - [Competition Orgainser Responsibilities](/policies/comp-organiser.pdf)
 
 ## Contact Us
-If you would like to get in touch with us, you can contact our email address <span><Obfuscate email="speedcubingireland@gmail.com" /></span> or at any of our social media accounts below.
+If you would like to get in touch with us, you can contact our email address <span><Obfuscate email="info@speedcubingireland.com" /></span> or at any of our social media accounts below.
 
 <div>
   <Link href="https://www.facebook.com/SpeedcubingIreland">
